--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="js/jquery.easings.min.js"></script>
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.easings.min.js"></script>
 		<script type="text/javascript" src="js/scrolloverflow.min.js"></script>
 		<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 		<script type="text/javascript" src="js/typed.min.js"></script>
