correct link include

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.easings.min.js"></script>
 		<script type="text/javascript" src="js/scrolloverflow.min.js"></script>
-		<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+		<script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
 		<script type="text/javascript" src="js/typed.min.js"></script>
 	</head>
 	<body>
