commit lighter chai

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    	<div class="container">
 
 			    <div id="title">
-		    		<img id="VCimage" src="img/gd.jpeg" class="js-fade fade-in is-paused" 	/>	    	
+		    		<img id="VCimage" src="img/gd.png" class="js-fade fade-in is-paused" 	/>	    	
 			    </div>
 	
 			    <div id="content">
