load font in html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 	<head>
+		<style type="text/css">
+			@font-face { font-family: Helvetica; src: url('css/font/Helvetica.ttf'); } 
+			.introduction {
+			  font-family: Helvetica;
+			}
+		</style>	
 		<link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
