load font in html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 			.introduction {
 			  font-family: Helvetica;
 			}
-		</style>	
+		</style>
+		<p id="loading" class="introduction">LOAD</p>
 		<link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
@@ -14,6 +15,7 @@
 		<script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
 		<script type="text/javascript" src="js/typed.min.js"></script>
 		<script>
+			document.getElementById("loading").style.marginTop = '-10000px';
 			$(window).on('load', function() {
 				$(".se-pre-con").fadeOut("slow", function() {
 	    		$('#fullpage').fullpage({
