--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
 		<script type="text/javascript" src="js/typed.min.js"></script>
 		<script type="text/javascript" src="js/move.js"></script>
-
+		<title>Chai YuXin website</title>
 	</head>
 	<body>
 		<div class="se-pre-con"></div>
