--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	    	<div class="container">
 
 			    <div id="title">
-		    		<img id="VCimage" src="img/gd.png" class="js-fade fade-in is-paused" 	/>	    	
+		    		<img id="VCimage" src="img/gd2.png" class="js-fade fade-in is-paused" 	/>	    	
 			    </div>
 	
 			    <div id="content">
